# CodebasePrompter

./: README.md  pyproject.toml
codebaseprompter/: __main__.py
configs/: config.yaml
