[project]
name = "codebaseprompter"
version = "0.1.0"
description = ""
authors = [
    {name = "Cemonix",email = "gittlermilan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "debugpy (>=1.8.14,<2.0.0)"
]
[project.scripts]
cbp = "codebaseprompter.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
